fix(contact): align items side by side

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body > * + * {
   background-color: #1aad49;
 }
 
-.two-column * {
+.inline-items * {
   display: inline-block;
   vertical-align: top;
 }
